Update 'ug3f168br-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-34749b41f8.0vs1.p3.openshiftapps.com/rhtap/rhtap-qe:1c77b5cc6789ddc8d3c726a9ff45a298be933c61@sha256:826da1575e5cef85461b3344fc0fdc28de4a40974944d677ad698644cbebd617

--- a/components/ug3f168br-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/ug3f168br-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ug3f168br-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-34749b41f8.0vs1.p3.openshiftapps.com/rhtap/rhtap-qe:1c77b5cc6789ddc8d3c726a9ff45a298be933c61@sha256:826da1575e5cef85461b3344fc0fdc28de4a40974944d677ad698644cbebd617
+          name: container-image
